--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "mongoose": "^8.1.1",
     "morgan": "^1.10.0"
   },
   "engines": {
